--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="phaser.min.js"></script>
-    <title>Document</title>
+    <title>飞机大战</title>
     <style>
     * {margin: 0;}
     #game {
