--- a/index.html
+++ b/index.html
@@ -2,10 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script src="phaser.min.js"></script>
+    <meta name="theme-color" content="#000">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="blank">
+    <meta name="full-screen" content="yes">
+    <meta name="x5-fullscreen" content="yes">
+    <link rel="icon" type="image/png" href="./logo.png" sizes="128x128">
+    <link rel="apple-touch-icon-precomposed" sizes="57x57" href="./logo.png">
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="./logo.png">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="./logo.png">
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="./logo.png">
     <title>飞机大战</title>
+    <script src="phaser.min.js"></script>
     <style>
     * {margin: 0;}
     #game {
